--- a/Check.SPort/Styles/TextBlock.xaml
+++ b/Check.SPort/Styles/TextBlock.xaml
@@ -50,4 +50,16 @@
         <Setter Property="TextWrapping" Value="Wrap" />
         <Setter Property="AcceptsReturn" Value="True" />
     </Style>
+
+    <Style x:Key="IpAddressStyle" TargetType="{x:Type TextBox}" BasedOn="{StaticResource MaterialDesignOutlinedTextBox}">
+        <Setter Property="Width" Value="120" />
+        <Setter Property="Height" Value="30" />
+        <Setter Property="Padding" Value="0" />
+        <Setter Property="MaxLength" Value="15" />
+        <Setter Property="BorderThickness" Value="2" />
+        <Setter Property="Background" Value="#F5F5F5" />
+        <Setter Property="BorderBrush" Value="#2196F3" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="HorizontalContentAlignment" Value="Center" />
+    </Style>
 </ResourceDictionary>
