--- a/Check.SPort/Styles/TextBlock.xaml
+++ b/Check.SPort/Styles/TextBlock.xaml
@@ -52,7 +52,7 @@
     </Style>
 
     <Style x:Key="IpAddressStyle" TargetType="{x:Type TextBox}" BasedOn="{StaticResource MaterialDesignOutlinedTextBox}">
-        <Setter Property="Width" Value="120" />
+        <Setter Property="Width" Value="auto" />
         <Setter Property="Height" Value="30" />
         <Setter Property="Padding" Value="0" />
         <Setter Property="MaxLength" Value="15" />
